glow added on text and ball

--- a/eigntBallHTMLtoo.html
+++ b/eigntBallHTMLtoo.html
@@ -53,17 +53,17 @@
 
  <body>
 <div class="textBox">
- <h1>Ask the eight ball a question</h1>
+ <h1 class="neon">Ask the eight ball a question</h1>
 
-         <label class="typytypy">Type your question: </label><br>
+         <label class="typytypy neon">Type your question: </label><br>
         <input type = "text" id = "userQuestion" /><br>
 
         <button onclick = "predictFuture()">predict future</button>
 
-        <h2>Eight ball answered : </h2>
+        <h2 class="neon">Eight ball answered : </h2>
 </div>
 <!--------the ball--------------->
-       <div class="ball">
+       <div class="ball glowing">
         <p id="txtOutput" class="answer"></p>
         <div class="white"><p class="eight">8</p></div>
       </div>
